--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <meta name="Description" content="A facerecognition app">
+
+  <meta name="google-site-verification" content="0eqWmnx1TxhhmUVuukI44FhwxiAoHyV10Vvq79P2Gi8" />
+
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -39,6 +42,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <div id="modal-root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
